# CloudCompare

plugins/core/: CMakeLists.txt
plugins/core/qAnimation/: CMakeLists.txt
plugins/core/qAnimation/src/: CMakeLists.txt  qAnimationDlg.cpp  qAnimationDlg.h  spline.h
plugins/core/qAnimation/src/Splinter/: CMakeLists.txt
plugins/core/qAnimation/ui/: animationDlg.ui
plugins/core/qWrlAnimation/: CMakeLists.txt  README.md  info.json  qWrlAnimation.cpp  qWrlAnimation.h  qWrlAnimation.qrc
plugins/core/qWrlAnimation/src/: CMakeLists.txt  qWrlAnimationDlg.cpp  qWrlAnimationDlg.h  viewWrl.cpp  viewWrl.h
plugins/core/qWrlAnimation/ui/: CMakeLists.txt  wrlAnimationDlg.ui
